[package]
authors = ["Aaronepower <theaaronepower@gmail.com>"]
description = "A safe, reliable implementation of remove_dir_all for Windows"
include = [
    "Cargo.toml",
    "LICENCE-APACHE",
    "LICENCE-MIT",
    "src/**/*",
    "README.md"
]
license = "MIT/Apache-2.0"
name = "remove_dir_all"
readme = "README.md"
repository = "https://github.com/XAMPPRocky/remove_dir_all.git"
version = "0.5.2"
keywords = ["utility", "filesystem", "remove_dir", "windows"]
categories = ["filesystem"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "errhandlingapi", "winerror", "fileapi", "winbase"]}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = {rev ="v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git",optional = true}

[dev-dependencies]
doc-comment = "0.3"


[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
